prometheus-node-exporter (0.14.0+ds-4) UNRELEASED; urgency=medium

  * debian/control: Update package name for client-golang.
  * debian/control: Update Standards-Version (no changes).
  * debian/control: Add XS-Go-Import-Path.

 -- Martín Ferrari <tincho@debian.org>  Tue, 29 Aug 2017 01:40:10 +0000

prometheus-node-exporter (0.14.0+ds-3) unstable; urgency=medium

  * Fix problem introduced by the combination of two flags (nozfs and mips*).
  * Fix test timing issue in slow arches.

 -- Martín Ferrari <tincho@debian.org>  Sat, 19 Aug 2017 11:34:09 +0000

prometheus-node-exporter (0.14.0+ds-2) unstable; urgency=medium

  * Add dh-systemd support. Closes: #866399.
  * Only depend on daemon if systemd-sysv is not installed. Closes: #870083.
  * Fix compilation on gccgo/mips*.
  * Fix integration test (wrong path under gccgo).
  * Disable the ZFS collector in 32-bit arches, until issue #629 is
    solved upstream.

 -- Martín Ferrari <tincho@debian.org>  Fri, 18 Aug 2017 09:36:40 +0000

prometheus-node-exporter (0.14.0+ds-1) unstable; urgency=medium

  * New upstream version. Closes: #867908.
  * Updated debian/copyright for vendored dependencies.
  * Add missing tests.
  * Update documentation, defaults file, examples.
  * debian/control: Update Standards-Version (no changes).
  * debian/control: Fix Vcs-* fields.
  * debian/control: Mark package as autopkgtest-able.
  * debian/control: Update dependency on procfs.
  * debian/gbp.conf: Add builder defaults.

 -- Martín Ferrari <tincho@debian.org>  Wed, 12 Jul 2017 00:54:52 +0000

prometheus-node-exporter (0.13.0+ds-1) unstable; urgency=medium

  * New upstream release.
  * Work around gccgo inability to handle vendor directory.
  * Fix build for arches not contemplated upstream.

 -- Martín Ferrari <tincho@debian.org>  Sat, 14 Jan 2017 05:38:44 -0300

prometheus-node-exporter (0.13.0~rc.2+ds-1) unstable; urgency=medium

  [ Paul Tagliamonte ]
  * Team upload.