@@ -3,6 +3,7 @@ prometheus-node-exporter (0.14.0+ds-4) UNRELEASED; urgency=medium
   * debian/control: Update package name for client-golang.
   * debian/control: Update Standards-Version (no changes).
   * debian/control: Add XS-Go-Import-Path.
+  * Replace dpkg-parsechangelog with /usr/share/dpkg/pkg-info.mk
 
  -- Martín Ferrari <tincho@debian.org>  Tue, 29 Aug 2017 01:40:10 +0000
 
